[metadata]
name = jupyter_abc
version = attr:jupyter_abc.version.__version__
author = Antti Kaihola
author_email = antti+jupyter_abc@kaihola.fi
license = MIT
description = Magic command for ABC musical notation in a Jupyter notebook
keywords =
  jupyter
  notebook
  music
  sheet_music
  notation
  abc

[options]
packages =
  jupyter_abc
include_package_data = False
zip_safe = False
install_requires =
  notebook

[options.package_data]
jupyter_abc = static/*.js

[bdist_wheel]
universal = 1
